# i18n-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
example/i18n/: .gitignore  Cargo.toml  build.rs
example/i18n/i18n/: !default.yml  en-EN.yml  ru-RU.yml  ru.yml
example/i18n/src/: main.rs
src/: codegen.rs  gen.rs  gen_code.rs  lib.rs  model.rs  test_utils.rs
src/codegen/: gen.rs  helpers.rs  mod.rs
test-assets/: !default.yml  en-EN.yml  ru-RU.yml  ru.yml
test-assets/matching/: match.yml  not_match.yml
