[package]
authors = ["Alexander Khudekov"]
edition = "2021"
categories = ["localization", "internationalization"]
keywords = ["localization", "internationalization", "i18n", "l10n"]
license = "BSD 3-Clause"
description = "i18n codegen from .yml files"
exclude = ["example"]
readme = "README.md"
repository = "https://github.com/Pancir/i18n-gen"
name = "i18n-gen"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"

[dev-dependencies]
pretty_env_logger = "0.4"
